# hlwm

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.md  modules.md
herbstluftwm/: __init__.py  __main__.py  constants.py  log.py  old_main.py
herbstluftwm/config/: attributes.py  keybinds.py  panel.py  startup.py
herbstluftwm/helper/: helper.py  magic.py  panel.py  pointer.py  runner.py  test.py  utils.py
herbstluftwm/misc/: attributes.py  keybinds.py
herbstluftwm/setup/: main.py  module_load.py
herbstluftwm/setup/magic/: core.py  key_binder.py  rules.py  theme.py
herbstluftwm/utils/: extension.py  profiler.py  utils.py  utils_misc.py
tests/: test.py
